--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 body{
     padding: 0px;
     margin:0px;
+    width: 100%;
 }
 
 /* start navigation */
@@ -13,7 +14,13 @@ body{
     padding: 0 2rem 0 5rem;
 }
 .navbar{
+    position: fixed;
     padding: 1rem 20rem;
+    background: #f9a825;
+    width: 100%;
+    height: 6vh;
+    z-index: 999;
+    
 }
 
 .nav-link{
@@ -22,6 +29,14 @@ body{
     font-weight:500;
     padding:1.7rem;
     color: black;
+}
+
+.nav-item:hover{
+  color: red;
+  background: #FFFFFF;
+  border-radius: 8px;
+  height: 9vh;
+
 }
 
 .navbar-nav .active a{
@@ -279,4 +294,18 @@ footer {
     color: white;
     padding-top: 5vh;
     font-size: 5vh;
+  }
+
+  .blink_me {
+    animation: blinker 1s linear infinite;
+  }
+  
+  @keyframes blinker {  
+    50% { opacity: 0; }
+  }
+
+  .quiz_title{
+    margin: 10px;
+    
+    padding: 10px;
   }
